# aws-rs

./: Cargo.toml
src/: auth.rs  aws.rs  main.rs  mod1.rs  s3.rs  status.rs
