[package]
name = "aws"
version = "0.0.0"
authors = [ "https://github.com/samyatchmenoff" ]

[lib]
name = "aws"
source = "src/aws.rs"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"

[dependencies.rust-crypto]
git = "https://github.com/DaGenix/rust-crypto"

[dependencies.RustyXML]
git = "https://github.com/Florob/RustyXML"

[dependencies.time]
rev = "da2a5e65e3acd945"

[dependencies.url]
git = "https://github.com/servo/rust-url"
features = ["query_encoding"]